--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,9 @@
     -->
       <!-- public/index.html -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#317EFB">
+
 
     <title>React App</title>
   </head>
